trying to fix horizontal scrolling

--- a/css/styles.css
+++ b/css/styles.css
@@ -29,6 +29,10 @@ body {
     color: var(--color-body);
 }
 
+html, body {
+    overflow-x: hidden;
+}
+
 h1,
 h2, 
 h3 {
